# agent-fs

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mcp.json  .wts-config.json  .wts-setup.ts  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  MOUNTING.md  PRODUCT.md  README.md  bunfig.toml  docker-compose.hosted.yml  docker-compose.yml  fly.toml  install.sh  litefs.yml  package.json  prek.toml  tsconfig.base.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docker-publish.yml  fly-deploy.yml  npm-publish.yml  release.yml
docs/: api-reference.md  deployment.md  fuse-compat.md  fuse-mount.md  fuse-troubleshooting.md  mcp-setup.md  openapi.json  sql.md
docs/mounting/: README.md  e2b.md  hetzner.md  sprite.md
examples/: README.md
examples/just-bash-agent-fs/: .env.example  README.md  package.json
landing/: .gitignore  index.html  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.server.json  vercel.json  vite.config.ts
landing/content/: markdown.ts
landing/public/: AGENTS.md  robots.txt  site.webmanifest  sitemap.md  sitemap.xml
landing/scripts/: generate-markdown.ts  submit-indexnow.ts
landing/src/: App.tsx  index.css  main.tsx  seo.ts
live/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
live/src/: App.tsx  index.css  (+1 more)
scripts/: build.sh  e2e-raw-put.sh  e2e-remote-mount.ts  e2e.ts  fly-deploy.ts  release.sh  sync-openapi.ts  sync-versions.ts
ui/: index.html  package.json  pnpm-lock.yaml
(+221 files in other folders)
